--- a/index.html
+++ b/index.html
@@ -28,7 +28,47 @@
                     <button class="profile__edit-button"></button>
                     <p class="profile_description">Explorer</p>
                 </div>
-<button class="profile__add-button"></button>
+              <button class="profile__add-button"></button>
+            </section>
+            <section class="cards page__section">
+                <ul class="card__list">
+                    <li class="card">
+                        <img src="./images/bald-mountains.jpg" class="card__image"/>
+                        <div class="card__description"> <h2>Bald Mountain</h2>
+                        <button class="card__like-button"></button>
+                    </div>
+                </li>
+                    <li class="card">
+                        <img src="./images/lake-louise.jpg" class="card__image"/>
+                        <div class="card__description"> <h2>Lake Louise</h2>
+                        <button class="card__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/lago-di-braies.jpg" class="card__image"/>
+                        <div class="card__description"> <h2>Lago Di Braies</h2>
+                        <button class="card__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/latemar.jpg" class="card__image"/>
+                        <div class="card__description"> <h2>Latemar</h2>
+                        <button class="card__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/yosemite-valley.jpg" class="card__image"/>
+                        <div class="card__description"> <h2>Yosemite Valley</h2>
+                        <button class="card__like-button"></button>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="./images/vanoise-national-park.jpg" class="card__image"/>
+                        <div class="card__description"> <h2>Vanoise National Park</h2>
+                        <button class="card__like-button"></button>
+                        </div>
+                    </li>
+                </ul>
             </section>
         </main>
         </div>
