--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        
+
         <meta content="ie=edge" http-epuiv="X-UA-Compatible" />
     <title>Around the U.S</title>
     <link rel="stylesheet" href="./pages/index.css"  />
@@ -11,16 +11,16 @@
     <body class="page">
         <div class="page__content">
         <header class="header">
-            <img src="./images/vector.svg" 
+            <img src="./images/vector.svg"
             alt="Around the us logo"
           class="header__logo"
            />
         </header>
         <main class="content">
             <section class="profile">
-                <img 
-                src="./images/jacques-cousteau.jpg" 
-                alt="Avatar jacques cousteau" 
+                <img
+                src="./images/jacques-cousteau.jpg"
+                alt="Avatar jacques cousteau"
                 class="profile__image"
                 />
                 <div class="profile__info">
@@ -72,5 +72,10 @@
             </section>
         </main>
         </div>
+        <footer class="footer">
+          <div class="footer__container">
+            <p class="footer__text">© 2023 Around The U.S.</p>
+          </div>
+        </footer>
     </body>
 </html>
