--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="profile__info">
                     <h1 class="profile__title">Jacques-Cousteau</h1>
                     <button class="profile__edit-button"></button>
-                    <p class="profile_description">Explorer</p>
+                    <p class="profile__description">Explorer</p>
                 </div>
               <button class="profile__add-button"></button>
             </section>
