--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <button class="profile__add-button"></button>
             </section>
             <section class="cards page__section">
-                <ul class="card__list">
+                <ul class="cards__list">
                     <li class="card">
                         <img src="./images/bald-mountains.jpg" class="card__image"/>
                         <div class="card__description"> <h2>Bald Mountain</h2>
