--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <meta content="ie=edge" http-epuiv="X-UA-Compatible" />
+        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <title>Around the U.S</title>
     <link rel="stylesheet" href="./pages/index.css"  />
   </head>
