--- a/index.html
+++ b/index.html
@@ -33,37 +33,55 @@
             <section class="cards page__section">
                 <ul class="cards__list">
                     <li class="card">
-                      <img src="./images/bald-mountains.jpg" class="card__image"/>
+                      <img
+                      src="./images/bald-mountains.jpg"
+                      class="card__image"
+                      alt="Bald Mountains"/>
                         <div class="card__description"> <h2>Bald Mountain</h2>
                         <button class="card__like-button"></button>
                     </div>
                 </li>
                     <li class="card">
-                        <img src="./images/lake-louise.jpg" class="card__image"/>
+                        <img
+                        src="./images/lake-louise.jpg"
+                        class="card__image"
+                        alt="Lake Louise"/>
                         <div class="card__description"> <h2>Lake Louise</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
-                        <img src="./images/lago-di-braies.jpg" class="card__image"/>
+                        <img
+                        src="./images/lago-di-braies.jpg"
+                        class="card__image"
+                        alt="Lado Di Braies"/>
                         <div class="card__description"> <h2>Lago Di Braies</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
-                        <img src="./images/latemar.jpg" class="card__image"/>
+                        <img
+                        src="./images/latemar.jpg"
+                        class="card__image"
+                        alt="Latemar"/>
                         <div class="card__description"> <h2>Latemar</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
-                        <img src="./images/yosemite-valley.jpg" class="card__image"/>
+                        <img
+                        src="./images/yosemite-valley.jpg"
+                        class="card__image"
+                        alt="Yosemite Valley"/>
                         <div class="card__description"> <h2>Yosemite Valley</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
-                        <img src="./images/vanoise-national-park.jpg" class="card__image"/>
+                        <img
+                        src="./images/vanoise-national-park.jpg"
+                        class="card__image"
+                        alt="Vanoise National Park"/>
                         <div class="card__description"> <h2>Vanoise National Park</h2>
                         <button class="card__like-button"></button>
                         </div>
