--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 class="profile__image"
                 />
                 <div class="profile__info">
-                    <h1 class="profile__title">Jacques-Cousteau</h1>
+                    <h1 class="profile__title">Jacques Cousteau</h1>
                     <button class="profile__edit-button"></button>
                     <p class="profile__description">Explorer</p>
                 </div>
@@ -88,12 +88,11 @@
                     </li>
                 </ul>
             </section>
-        </main>
-        </div>
-        <footer class="footer">
+        </main><footer class="footer">
           <div class="footer__container">
             <p class="footer__text">© 2023 Around The U.S.</p>
           </div>
+        </div>
         </footer>
     </body>
 </html>
