--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
                     </li>
                 </ul>
             </section>
-        </main><footer class="footer">
+        </main>
+        <footer class="footer">
           <div class="footer__container">
             <p class="footer__text">© 2023 Around The U.S.</p>
-          </div>
+            </div>
+          </footer>
         </div>
         </footer>
     </body>
