--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
             </section>
         </main>
         <footer class="footer">
-          <div class="footer__container">
-            <p class="footer__text">© 2023 Around The U.S.</p>
-            </div>
-          </footer>
+          <p class="footer__copyright">&copy; 2023 Around the U.S.</p>
+        </footer>
         </div>
         </footer>
     </body>
