updated on cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                       src="./images/bald-mountains.jpg"
                       class="card__image"
                       alt="Bald Mountains"/>
-                        <div class="card__description"> <h2>Bald Mountain</h2>
+                        <div class="card__description">
+                          <h2 class="card__title">Bald Mountain</h2>
                         <button class="card__like-button"></button>
                     </div>
                 </li>
@@ -46,7 +47,8 @@
                         src="./images/lake-louise.jpg"
                         class="card__image"
                         alt="Lake Louise"/>
-                        <div class="card__description"> <h2>Lake Louise</h2>
+                        <div class="card__description">
+                          <h2 class="card__title">Lake Louise</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
@@ -55,7 +57,8 @@
                         src="./images/lago-di-braies.jpg"
                         class="card__image"
                         alt="Lado Di Braies"/>
-                        <div class="card__description"> <h2>Lago Di Braies</h2>
+                        <div class="card__description">
+                          <h2 class="card__title">Lago Di Braies</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
@@ -64,7 +67,8 @@
                         src="./images/latemar.jpg"
                         class="card__image"
                         alt="Latemar"/>
-                        <div class="card__description"> <h2>Latemar</h2>
+                        <div class="card__description">
+                          <h2 class="card__title">Latemar</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
@@ -73,7 +77,8 @@
                         src="./images/yosemite-valley.jpg"
                         class="card__image"
                         alt="Yosemite Valley"/>
-                        <div class="card__description"> <h2>Yosemite Valley</h2>
+                        <div class="card__description">
+                          <h2 class="card__title">Yosemite Valley</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
@@ -82,7 +87,8 @@
                         src="./images/vanoise-national-park.jpg"
                         class="card__image"
                         alt="Vanoise National Park"/>
-                        <div class="card__description"> <h2>Vanoise National Park</h2>
+                        <div class="card__description">
+                          <h2 class="card__title">Vanoise National Park</h2>
                         <button class="card__like-button"></button>
                         </div>
                     </li>
