update on errors

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 />
                 <div class="profile__info">
                     <h1 class="profile__title">Jacques Cousteau</h1>
-                    <button class="profile__edit-button"></button>
+                    <button type="button" class="profile__edit-button"></button>
                     <p class="profile__description">Explorer</p>
                 </div>
-              <button class="profile__add-button"></button>
+              <button type="button" class="profile__add-button"></button>
             </section>
             <section class="cards page__section">
                 <ul class="cards__list">
@@ -39,7 +39,7 @@
                       alt="Bald Mountains"/>
                         <div class="card__description">
                           <h2 class="card__title">Bald Mountain</h2>
-                        <button class="card__like-button"></button>
+                        <button type="button" class="card__like-button"></button>
                     </div>
                 </li>
                     <li class="card">
@@ -49,7 +49,7 @@
                         alt="Lake Louise"/>
                         <div class="card__description">
                           <h2 class="card__title">Lake Louise</h2>
-                        <button class="card__like-button"></button>
+                        <button type="button" class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
@@ -59,7 +59,7 @@
                         alt="Lado Di Braies"/>
                         <div class="card__description">
                           <h2 class="card__title">Lago Di Braies</h2>
-                        <button class="card__like-button"></button>
+                        <button type="button" class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
@@ -69,7 +69,7 @@
                         alt="Latemar"/>
                         <div class="card__description">
                           <h2 class="card__title">Latemar</h2>
-                        <button class="card__like-button"></button>
+                        <button type="button" class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
@@ -79,7 +79,7 @@
                         alt="Yosemite Valley"/>
                         <div class="card__description">
                           <h2 class="card__title">Yosemite Valley</h2>
-                        <button class="card__like-button"></button>
+                        <button type="button" class="card__like-button"></button>
                         </div>
                     </li>
                     <li class="card">
@@ -89,7 +89,7 @@
                         alt="Vanoise National Park"/>
                         <div class="card__description">
                           <h2 class="card__title">Vanoise National Park</h2>
-                        <button class="card__like-button"></button>
+                        <button type="button" class="card__like-button"></button>
                         </div>
                     </li>
                 </ul>
