--- a/index.html
+++ b/index.html
@@ -1,103 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <title>Around the U.S</title>
-    <link rel="stylesheet" href="./pages/index.css"  />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
-    <body class="page">
-        <div class="page__content">
-        <header class="header">
-            <img src="./images/vector.svg"
-            alt="Around the us logo"
+  <body class="page">
+    <div class="page__content">
+      <header class="header">
+        <img
+          src="./images/vector.svg"
+          alt="Around the us logo"
           class="header__logo"
-           />
-        </header>
-        <main class="content">
-            <section class="profile">
-                <img
-                src="./images/jacques-cousteau.jpg"
-                alt="Avatar jacques cousteau"
-                class="profile__image"
-                />
-                <div class="profile__info">
-                    <h1 class="profile__title">Jacques Cousteau</h1>
-                    <button type="button" class="profile__edit-button"></button>
-                    <p class="profile__description">Explorer</p>
-                </div>
-              <button type="button" class="profile__add-button"></button>
-            </section>
-            <section class="cards page__section">
-                <ul class="cards__list">
-                    <li class="card">
-                      <img
-                      src="./images/bald-mountains.jpg"
-                      class="card__image"
-                      alt="Bald Mountains"/>
-                        <div class="card__description">
-                          <h2 class="card__title">Bald Mountain</h2>
-                        <button type="button" class="card__like-button"></button>
-                    </div>
-                </li>
-                    <li class="card">
-                        <img
-                        src="./images/lake-louise.jpg"
-                        class="card__image"
-                        alt="Lake Louise"/>
-                        <div class="card__description">
-                          <h2 class="card__title">Lake Louise</h2>
-                        <button type="button" class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img
-                        src="./images/lago-di-braies.jpg"
-                        class="card__image"
-                        alt="Lado Di Braies"/>
-                        <div class="card__description">
-                          <h2 class="card__title">Lago Di Braies</h2>
-                        <button type="button" class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img
-                        src="./images/latemar.jpg"
-                        class="card__image"
-                        alt="Latemar"/>
-                        <div class="card__description">
-                          <h2 class="card__title">Latemar</h2>
-                        <button type="button" class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img
-                        src="./images/yosemite-valley.jpg"
-                        class="card__image"
-                        alt="Yosemite Valley"/>
-                        <div class="card__description">
-                          <h2 class="card__title">Yosemite Valley</h2>
-                        <button type="button" class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img
-                        src="./images/vanoise-national-park.jpg"
-                        class="card__image"
-                        alt="Vanoise National Park"/>
-                        <div class="card__description">
-                          <h2 class="card__title">Vanoise National Park</h2>
-                        <button type="button" class="card__like-button"></button>
-                        </div>
-                    </li>
-                </ul>
-            </section>
-        </main>
-        <footer class="footer">
-          <p class="footer__copyright">&copy; 2023 Around the U.S.</p>
-        </footer>
-        </div>
-    </body>
+        />
+      </header>
+      <main class="content">
+        <section class="profile">
+          <img
+            src="./images/jacques-cousteau.jpg"
+            alt="Avatar jacques cousteau"
+            class="profile__image"
+          />
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button type="button" class="profile__edit-button"></button>
+            <p class="profile__description">Explorer</p>
+          </div>
+          <button type="button" class="profile__add-button"></button>
+        </section>
+        <section class="cards page__section">
+          <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/bald-mountains.jpg"
+                class="card__image"
+                alt="Bald Mountains"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Bald Mountain</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lake-louise.jpg"
+                class="card__image"
+                alt="Lake Louise"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lake Louise</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lago-di-braies.jpg"
+                class="card__image"
+                alt="Lado Di Braies"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lago Di Braies</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/latemar.jpg"
+                class="card__image"
+                alt="Latemar"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Latemar</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/yosemite-valley.jpg"
+                class="card__image"
+                alt="Yosemite Valley"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/vanoise-national-park.jpg"
+                class="card__image"
+                alt="Vanoise National Park"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="footer__copyright">&copy; 2023 Around the U.S.</p>
+      </footer>
+    </div>
+  </body>
 </html>
