--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">&copy; 2023 Around the U.S.</p>
+        <p class="footer__content">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
   </body>
