--- a/index.html
+++ b/index.html
@@ -106,5 +106,7 @@
         <p class="footer__content">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
