--- a/index.html
+++ b/index.html
@@ -106,7 +106,17 @@
         <p class="footer__content">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
-
+<div class="modal">
+<div class="modal__container">
+  <button class="modal__close"></button>
+  <p class="modal__heading">Edit Profile</p>
+  <form class="modal__form">
+    <input type="text" name="title">
+    <input type="text" name="description">
+    <button class="modal__button">Save</button>
+  </form>
+</div>
+</div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
