--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button type="button" class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button" id="profile-edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button type="button" class="profile__add-button"></button>
@@ -106,7 +106,7 @@
         <p class="footer__content">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
-<div class="modal">
+<div class="modal" id="profile-edit-modal">
 <div class="modal__container">
   <button class="modal__close"></button>
   <p class="modal__heading">Edit Profile</p>
