--- a/index.html
+++ b/index.html
@@ -32,91 +32,53 @@
           <button type="button" class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="cards__list">
-            <li class="card">
-              <img
-                src="./images/bald-mountains.jpg"
-                class="card__image"
-                alt="Bald Mountains"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Bald Mountain</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/lake-louise.jpg"
-                class="card__image"
-                alt="Lake Louise"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Lake Louise</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/lago-di-braies.jpg"
-                class="card__image"
-                alt="Lado Di Braies"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Lago Di Braies</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/latemar.jpg"
-                class="card__image"
-                alt="Latemar"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Latemar</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/yosemite-valley.jpg"
-                class="card__image"
-                alt="Yosemite Valley"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Yosemite Valley</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/vanoise-national-park.jpg"
-                class="card__image"
-                alt="Vanoise National Park"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Vanoise National Park</h2>
-                <button type="button" class="card__like-button"></button>
-              </div>
-            </li>
-          </ul>
+          <ul class="cards__list"></ul>
         </section>
       </main>
       <footer class="footer">
         <p class="footer__content">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
-<div class="modal" id="profile-edit-modal">
+
+    <div class="modal" id="profile-edit-modal">
 <div class="modal__container">
-  <button class="modal__close"></button>
-  <p class="modal__heading">Edit Profile</p>
+  <button class="modal__close" type="button"></button>
+  <p class="modal__title">Edit Profile</p>
   <form class="modal__form">
-    <input type="text" name="title">
-    <input type="text" name="description">
-    <button class="modal__button">Save</button>
+    <input
+    type="text"
+    name="title"
+    id="profile-title-input"
+    class="modal__input"
+    placeholder="Name"
+    />
+    <input
+    class="modal__input"
+    type="text"
+    id="profile-discription-input"
+    name="description"
+    placeholder="Description"
+    />
+    <button class="modal__button" type="submit">Save</button>
   </form>
 </div>
 </div>
-    <script src="./scripts/index.js"></script>
+
+<template id="card-template">
+  <li class="card">
+    <img
+      src=""
+      class="card__image"
+      alt=""
+    />
+    <div class="card__description">
+      <h2 class="card__title"></h2>
+      <button type="button" class="card__like-button"></button>
+    </div>
+  </li>
+
+</template>
+
+<script src="./scripts/index.js"></script>
   </body>
 </html>
