--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button type="button" class="profile__edit-button" id="profile-edit-button"></button>
+            <button
+              type="button"
+              class="profile__edit-button"
+              id="profile-edit-button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button type="button" class="profile__add-button"></button>
@@ -41,44 +45,39 @@
     </div>
 
     <div class="modal" id="profile-edit-modal">
-<div class="modal__container">
-  <button class="modal__close" type="button"></button>
-  <p class="modal__title">Edit Profile</p>
-  <form class="modal__form">
-    <input
-    type="text"
-    name="title"
-    id="profile-title-input"
-    class="modal__input"
-    placeholder="Name"
-    />
-    <input
-    class="modal__input"
-    type="text"
-    id="profile-discription-input"
-    name="description"
-    placeholder="Description"
-    />
-    <button class="modal__button" type="submit">Save</button>
-  </form>
-</div>
-</div>
-
-<template id="card-template">
-  <li class="card">
-    <img
-      src=""
-      class="card__image"
-      alt=""
-    />
-    <div class="card__description">
-      <h2 class="card__title"></h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="modal__container">
+        <button class="modal__close" type="button"></button>
+        <h class="modal__title">Edit Profile</h>
+        <form class="modal__form">
+          <input
+            type="text"
+            name="title"
+            id="profile-title-input"
+            class="modal__input"
+            placeholder="Name"
+          />
+          <input
+            class="modal__input"
+            type="text"
+            id="profile-discription-input"
+            name="description"
+            placeholder="Description"
+          />
+          <button class="modal__button" type="submit">Save</button>
+        </form>
+      </div>
     </div>
-  </li>
 
-</template>
+    <template id="card-template">
+      <li class="card">
+        <img src="" class="card__image" alt="" />
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button type="button" class="card__like-button"></button>
+        </div>
+      </li>
+    </template>
 
-<script src="./scripts/index.js"></script>
+    <script src="./scripts/index_defer.js" defer></script>
   </body>
 </html>
