--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button class="modal__close" type="button"></button>
-        <h class="modal__title">Edit Profile</h>
+        <p class="modal__title">Edit Profile</p>
         <form class="modal__form">
           <input
             type="text"
@@ -78,6 +78,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index_defer.js" defer></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
