--- a/index.html
+++ b/index.html
@@ -43,7 +43,32 @@
         <p class="footer__content">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
+<!-- add card modal-->
+<div class="modal" id="add-card-form">
+  <div class="modal__container">
+    <button class="modal__close" type="button"></button>
+    <p class="modal__title">New Place</p>
+    <form class="modal__form">
+      <input
+        type="text"
+        name="title"
+        id="profile-title-input_title"
+        class="modal__input"
+        placeholder="Title"
+      />
+      <input
+        class="modal__input"
+        type="text"
+        id="profile-discription-input_url"
+        name="url"
+        placeholder="Image URL"
+      />
+      <button class="modal__button" type="submit">Save</button>
+    </form>
+  </div>
 
+
+<!-- Edit Modal-->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button class="modal__close" type="button"></button>
