--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </footer>
     </div>
 <!-- add card modal-->
-<div class="modal" id="add-card-form">
+<div class="modal" id="add-card-modal">
   <div class="modal__container">
     <button class="modal__close" type="button"></button>
     <p class="modal__title">New Place</p>
