--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
         </form>
       </div>
     </div>
+<!-- remove-->
+
+
+
+
+<!--<div class="modal" id="previewImageModal">
+  <div class="modal__image-container">
+    <img
+      class="modal__image"
+      id="modalImage"
+      alt="card image preview"
+      src="#" />
+    <p class="modal__text" id="modalText"></p>
+    <button
+      class="modal__close"
+      id="previewCloseButton"
+      type="button"></button>
+  </div>
+</div> -->
+
 
     <template id="card-template">
       <li class="card">
@@ -99,10 +119,10 @@
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__like-button"></button>
-        </div>
+          <button type="button" class="card__delete-button"></button>
+    </div>
       </li>
     </template>
-
-    <script src="./scripts/index.js" defer></script>
+ <script src="./scripts/index.js" defer></script>
   </body>
 </html>
