update trash and preview image

--- a/index.html
+++ b/index.html
@@ -92,12 +92,9 @@
         </form>
       </div>
     </div>
-<!-- remove-->
+<!-- preview image-->
 
-
-
-
-<!--<div class="modal" id="previewImageModal">
+<div class="modal" id="previewImageModal">
   <div class="modal__image-container">
     <img
       class="modal__image"
@@ -110,9 +107,9 @@
       id="previewCloseButton"
       type="button"></button>
   </div>
-</div> -->
+</div>
 
-
+<!-- remove and like button-->
     <template id="card-template">
       <li class="card">
         <img src="" class="card__image" alt="" />
