--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
+      </div>
 
       <!-- Edit Modal-->
       <div class="modal" id="profile-edit-modal">
@@ -127,5 +128,6 @@
       </template>
       <script src="./scripts/index.js" defer></script>
     </div>
+    </body>
   </body>
 </html>
