--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             name="url"
             placeholder="Image URL"
           />
-          <button class="modal__button" type="submit">Save</button>
+          <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
     </div>
