--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <button class="modal__close" type="button"></button>
         <p class="modal__title">New Place</p>
         <form class="modal__form">
+          <label class="modal__label">
           <input
             type="text"
             name="title"
@@ -56,6 +57,9 @@
             class="modal__input"
             placeholder="Title"
           />
+          <span class="modal__error" id="image-title-error"></span>
+        </label>
+          <label class="modal__label">
           <input
             class="modal__input"
             type="text"
@@ -63,6 +67,8 @@
             name="url"
             placeholder="Image URL"
           />
+          <span class="modal__error" id="image-url-error"></span>
+        </label>
           <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
@@ -78,25 +84,36 @@
         ></button>
         <p class="modal__title">Edit Profile</p>
         <form class="modal__form">
+          <label class="modal__label"></label>
           <input
             type="text"
             name="title"
             id="profile-title-input"
             class="modal__input"
             placeholder="Name"
+            minlength="2"
+            maxlength="40"
+            required
           />
+        </label>
+          <span class="modal__error" id="owners-name-error"></span>
+          <label class="modal__label">
           <input
             class="modal__input"
             type="text"
             id="profile-discription-input"
             name="description"
             placeholder="Description"
+            minlength="2"
+            maxlength="200"
+            required
           />
+        </label>
+          <span class="modal__error" id="owners-description-error"></span>
           <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
-    <!-- preview image-->
 
     <div class="modal" id="previewImageModal">
       <div class="modal__image-container">
@@ -115,7 +132,10 @@
       </div>
     </div>
 
-    <!-- remove and like button-->
+    <!--Index.js-->
+    <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validation.js"></script>
+
     <template id="card-template">
       <li class="card">
         <img src="" class="card__image" alt="" />
